# gkEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  _obj2gmf_media.sh  appveyor.yml  appveyor_setup.bat  auto_build.bat  auto_cmake.bat  auto_cmake.sh  auto_make_env.bat  auto_make_env.sh  b.sh  build_all.bat  clean_proj_env.bat  clean_proj_env.sh  git.gitignore  gkENGINE_CORE_Vc10.sln  gkENGINE_EDITOR_Vc10.sln  hand_make_env.bat  hand_make_env.sh  hand_make_resource.bat  hand_make_resource.sh  index.html  init_engine_res.bat  init_engine_res.sh  package.json  travis_setup.sh
cmake/Toolchains/: ios.cmake  osx.cmake
code/: gkENGINE_Tools_Vc10.sln  gkENGINE_Vc10.sln  gkENGINE_Vc14.sln
code/editor/gkPak/: gkPak.cpp  gkPak.vcxproj  gkPak.vcxproj.filters
code/editor/gkResourceCompiler/: Image.cpp  Image.h  atcCompiler.cpp  atcCompiler.h  compilerlist.h  ddsCompiler.cpp  ddsCompiler.h  gkResourceCompiler.cpp  gkResourceCompiler.vcxproj  gkResourceCompiler.vcxproj.filters  gmfCompiler.cpp  gmfCompiler.h  icompiler.h  shaderCompiler.cpp  shaderCompiler.h  strnormalize.cpp  strnormalize.h  txtCompiler.cpp  txtCompiler.h
code/editor/gkstudio/: BackstagePageHelp.cpp  BackstagePageHelp.h  BackstagePageInfo.cpp  BackstagePageInfo.h  BackstagePagePrint.cpp  BackstagePagePrint.h  BackstagePageRecent.cpp  BackstagePageRecent.h  BackstagePageSave.cpp  BackstagePageSave.h  BackstagePageSaveEmail.cpp  BackstagePageSaveEmail.h  BackstagePageSaveWeb.cpp  BackstagePageSaveWeb.h  CntrItem.cpp  CntrItem.h  GalleryItems.cpp  GalleryItems.h  MainFrm.cpp  MainFrm.h  PaneConsoleVar.cpp  PaneConsoleVar.h  Resource.h  RibbonSample.aps  RibbonSample.cpp  RibbonSample.h  RibbonSample.rc  RibbonSampleDoc.cpp  RibbonSampleDoc.h  RibbonSampleView.cpp  RibbonSampleView.h  StartBanner.cpp  StartBanner.h  StdAfx.cpp  StdAfx.h  WorkspaceTitle.cpp  WorkspaceTitle.h  WorkspaceView.cpp  WorkspaceView.h  gkEditor.cpp  (+5 more)
code/engine/: xc-coveralls.sh  xcenv.sh
code/engine/gkAnimationHavok/: AnimationManager.cpp  CharacterInstance.cpp  RigManager.cpp  RigManager.h  StableHeader.cpp  StableHeader.h  dllmain.cpp  gkAnimationHavok.cpp  gkAnimationHavok.h  gkAnimationHavok.vcxproj  gkAnimationHavok.vcxproj.filters  gkHavokAssetManagementUtil.cpp  gkHavokAssetManagementUtil.h  gkHavokLoader.cpp  gkHavokLoader.h  gkHkxMeshLoader.cpp  gkHkxMeshLoader.h  gkSkinRenderable.h  prerequistes.h
code/engine/gkCommon/: I3DEngine.h  IAnimation.h  IAuxRenderer.h  ICamera.h  IEvent.h  IFont.h  IGame.h  IGameFramework.h  IGameObject.h  IGameObjectLayer.h  IHavok.h  IInputManager.h  ILog.h  IMaterial.h  IMesh.h  IMeshLoader.h  INetworkLayer.h  IParticle.h  IRenderSequence.h  IRenderTarget.h  IRenderer.h  IResFile.h  IResource.h  IResourceManager.h  IShader.h  ISound.h  IStereoDevice.h  ISystem.h  ISystemProfiler.h  ITask.h  ITerrianSystem.h  ITexture.h  IThread.h  IThread_linux.h  IThread_win32.h  ITimeOfDay.h  ITimer.h  ITrackBus.h  IVideo.h  IXmlUtil.h  (+30 more)
code/engine/gkCore/: GameKnifeCore.rc  ReadMe.txt  dllmain.cpp  dllmain.h  gk3DEngine.cpp  gkCore.vcproj  gkCore.vcxproj  gkCore.vcxproj.filters  gkParticleInstance.cpp  gkParticleInstance.h  gkParticleRenderable.cpp  gkParticleRenderable.h  gkTerrian.cpp  gkTerrian.h  gkTerrianBlockRenderable.cpp  gkTerrianBlockRenderable.h  gkVegetationBlockRenderable.cpp  gkVegetationBlockRenderable.h  resource.h
code/engine/gkENGINE_CoreModule.xcodeproj/: project.pbxproj
code/engine/gkFont/: dllmain.cpp  gkFTFaceManager.cpp  gkFTFaceManager.h  gkFTFont.cpp  gkFTFont.h  gkFont.cpp  gkFont.h  gkFont.vcxproj  gkFont.vcxproj.filters  gkFontRenderable.cpp  gkFontRenderable.h
code/engine/gkGameFramework/: gkGameFramework.vcxproj  gkGameFramework.vcxproj.filters
code/engine/gkGameObjectSystem/: ReadMe.txt  gkGameObjectSystem.rc  gkGameObjectSystem.vcproj  gkGameObjectSystem.vcxproj  gkGameObjectSystem.vcxproj.filters  resource.h
code/engine/gkHavok/: gkHavok.rc  gkHavok.vcproj  gkHavok.vcxproj  gkHavok.vcxproj.filters  gkPhysicsTerrian.cpp  gkPhysicsTerrian.h  resource.h
code/engine/gkInput/: GameKnifeInput.rc  ReadMe.txt  gkInput.vcproj  gkInput.vcxproj  gkInput.vcxproj.filters  resource.h
code/engine/gkLauncher/: gkLauncher.cpp  gkLauncher.vcproj  gkLauncher.vcxproj  gkLauncher.vcxproj.filters
code/engine/gkLauncherAndroid/: android_native_app_glue.c  android_native_app_glue.h  gkLauncherAndroid.vcxproj  gkLauncherAndroid.vcxproj.filters
code/engine/gkLauncherIOS/: AppDelegate.mm
code/engine/gkLauncherIOS.xcodeproj/: project.pbxproj
code/engine/gkLauncherMac/: gkLauncherMac-Info.plist  main.mm
code/engine/gkLauncherMac.xcodeproj/: project.pbxproj
code/engine/gkLauncherUniverse/: AppDelegate.h  AppDelegate.mm  Main.storyboard  gkLauncher.vcxproj  gkLauncher.vcxproj.filters  gkLauncherUniverse-Info.plist  gkLauncherUniverse.rc  gkLauncherUniverse.vcxproj  gkLauncherUniverse.vcxproj.filters  main.m  resource.h
code/engine/gkLauncherUniverse.xcodeproj/: project.pbxproj
code/engine/gkMaxPort/: IGameExporter.rc  PRIM.RC  gkMaxPort.filters  gkMaxPort.rc  gkMaxPort.vcxproj  gkMaxPort.vcxproj.filters  resource.h  resource1.h  veroverrides.h
code/engine/gkNetwork/: GameKnifeNetwork.rc  ReadMe.txt  gkNetwork.vcproj  gkNetwork.vcxproj  gkNetwork.vcxproj.filters  resource.h
code/engine/gkNodeAPI/: addon.cpp
code/engine/gkOculus/: OculusCVars.cpp  OculusCVars.h  dllmain.cpp  gkOculus.cpp  gkOculus.h  gkOculus.vcxproj  gkOculus.vcxproj.filters  gkOculusDisortationRenderable.cpp  (+1 more)
code/gkENGINE_Tools.xcworkspace/: contents.xcworkspacedata
code/gkENGINE_xcode.xcworkspace/: contents.xcworkspacedata
editor/: editor-main.js  index.html  logger.js  package.json  respanel.js  style.css  webpack.config.js
editor/editor/: editor-main.js  main.js  respanel.js
editor/node_natives/: binding.gyp
exec/android/: AndroidManifest.xml  ant.properties  build.xml  local.properties
exec/engine/: Info.plist  _clean_shadercache.bat
exec/tools/: 7zr  PVRTexTool  PVRTexToolCLI  gkPak  gkResourceCompiler  nvcompress  nvdecompress
node_natives/: binding.gyp
(+1042 files in other folders)
